# ai-worlds-fair-2025

./: README.md  Trelis_TTS_Fine_tuning_Worlds_Fair.ipynb
agent-fine-tuning/: README.md  build_dataset_hub.py  pyproject.toml  run_agent_browser.py  run_mcp_playwright.py  sample-agent.py
agent-fine-tuning/archive/: README.md  run_agent_browser.py  test_agent.py
agent-fine-tuning/workspace/tools/code_interpreter/: kernel_connection_file_4d5ef5a2-e6e9-4eaa-b56d-497da1cf125f_65800.json  kernel_connection_file_5e48df21-3be6-4f2c-bf4c-8846ae9bb367_65981.json  kernel_connection_file_62c73f55-1b52-45c2-b46a-bce8e41e4529_65670.json  kernel_connection_file_cf14ace5-ecdd-4376-b369-d2272841927a_65730.json
day-1/: 02_multimodal_capabilities.ipynb  03_structured_outputs_function_calling_tools.ipynb  README.md
mcp-agent-fine-tune/: README.md  agent.py  push-to-hub.py  pyproject.toml  system_prompt.txt  test_api.py  test_trace_reload.py
mcp-agent-fine-tune/traces/: Navigate_to_trelis_com_and_rea_20250529_195610.json  find_the_title_of_the_page_tre_20250529_113358.json  find_the_title_on_trelis_com_20250529_105036.json  get_the_title_on_the_trelis_co_20250529_105824.json  go_to_trelis_com___find_the_th_20250529_130900.json  go_to_trelis_substack_com__nav_20250529_161533.json  navigate_to_trelis_com_and_the_20250529_200812.json
tts-fine-tuning/: README.md  Trelis_TTS_Fine_tuning_Worlds_Fair.ipynb
