[project]
name = "agent-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.2",
    "nodejs>=0.1.1",
    "playwright>=1.52.0",
    "qwen-agent>=0.0.25",
    "transformers>=4.52.3",
]
